# nme

./: .gitignore  sessions.mdk
nme0/: Makefile  eigentest
nme1/: arrowmatvec2.m  nme1p2a.m  nme1p3d.m  nme1p3e.m  plot_nme1p2a.m
nme1/nme1d/: ignores.dic  nme1d.mdk
nme1/nme1d/code/: CMakeLists.txt  Makefile  arrowmatvec  arrowmatvec.cpp  arrowmatvec.m  arrowmatvec2.cpp  arrowmatvec2.m  cmake_install.cmake  kron.cpp  multAmin.cpp  nme1p1e.m  nme1p3d.m  nme1p3e.m  nme1p3g.m
nme1/templates/: houserefl.cpp
nme13/nme13d/code/: matrix_ode_template.cpp
nme1d/: nme1d.mdk
nme2/: nme2.mdk
nme2/nme2d/: nme2d.mdk
nme2/nme2d/code/: CMakeLists.txt  buildC.cpp  buildC.m  solvelse.cpp
nme3/nme3d/: nme3d.mdk
nme3/nme3d/code/: CMakeLists.txt  fastrankoneinvit.cpp  rankoneinvit.cpp  tripletToCRS.cpp
nme4/nme4d/: nme4d.mdk
nme4/nme4d/code/: nme4p3a.m  steff_it.m  steff_step.m
nme5/nme5d/: nme5d.mdk
nme5/nme5d/code/: CMakeLists.txt  mod_newt_step.cpp
nme6/nme6d/: nme6d.mdk
nme6/nme6d/code/: CMakeCache.txt  CMakeLists.txt  LinearInterpolant.cpp  Makefile  cmake_install.cmake  dipoleval.m  dipoleval_alt.m  evaldp  evaldp.cpp  linear  timer.h
nme7/nme7d/: nme7d.aux  nme7d.tex
nme7/nme7d/code/: Makefile  nme7p1b.m  pi_approx  pi_approx.cpp  polycurveintp.m  wo_splines.m
nme8/nme8d/: nme8d.aux  nme8d.tex  preamble.tex
nme8/nme8d/code/: Makefile  NatCSI.cpp  natcsi  w_splines.m
sessions/: sessions.mdk
sessions/sessions/: sessions.mdk
shared/code/: mathdefs.tex
